--- a/temp.ipynb
+++ b/temp.ipynb
@@ -73,6 +73,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for_brandon = pd.read_csv('forbrandon.csv')\n",
+    "\n",
+    "for_brandon.to_json('for_brandon.json', orient='records')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "                    name                                        description  \\\n0               24K Gold  24K Gold, also known as 24K or Kosher Tangie, ...   \n1            303 OG Kush  303 OG Kush is a strain with various sources o...   \n2  3 Kings (Three Kings)  While the original breeder of 3 Kings is unkno...   \n3               3X Crazy  3X Crazy, also known as Insane OG or Optimus P...   \n4               501st OG  With its Kush lineage, 501st OG is a stout and...   \n\n                                  flavors                             effects  \n0  ['Blueberry', 'Mango', 'Spicy/Herbal']   ['Creative', 'Giggly', 'Relaxed']  \n1        ['Berry', 'Citrus', 'Pineapple']   ['Energetic', 'Happy', 'Relaxed']  \n2      ['Apple', 'Blue Cheese', 'Diesel']  ['Energetic', 'Focused', 'Hungry']  \n3         ['Berry', 'Blueberry', 'Lemon']   ['Energetic', 'Happy', 'Relaxed']  \n4          ['Diesel', 'Flowery', 'Skunk']    ['Aroused', 'Giggly', 'Relaxed']  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name</th>\n      <th>description</th>\n      <th>flavors</th>\n      <th>effects</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>24K Gold</td>\n      <td>24K Gold, also known as 24K or Kosher Tangie, ...</td>\n      <td>['Blueberry', 'Mango', 'Spicy/Herbal']</td>\n      <td>['Creative', 'Giggly', 'Relaxed']</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>303 OG Kush</td>\n      <td>303 OG Kush is a strain with various sources o...</td>\n      <td>['Berry', 'Citrus', 'Pineapple']</td>\n      <td>['Energetic', 'Happy', 'Relaxed']</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>3 Kings (Three Kings)</td>\n      <td>While the original breeder of 3 Kings is unkno...</td>\n      <td>['Apple', 'Blue Cheese', 'Diesel']</td>\n      <td>['Energetic', 'Focused', 'Hungry']</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3X Crazy</td>\n      <td>3X Crazy, also known as Insane OG or Optimus P...</td>\n      <td>['Berry', 'Blueberry', 'Lemon']</td>\n      <td>['Energetic', 'Happy', 'Relaxed']</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>501st OG</td>\n      <td>With its Kush lineage, 501st OG is a stout and...</td>\n      <td>['Diesel', 'Flowery', 'Skunk']</td>\n      <td>['Aroused', 'Giggly', 'Relaxed']</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 15
+    }
+   ],
+   "source": [
+    "for_brandon.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "name           object\ndescription    object\nflavors        object\neffects        object\ndtype: object"
+     },
+     "metadata": {},
+     "execution_count": 19
+    }
+   ],
+   "source": [
+    "for_brandon.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "[\"['Blueberry',\", \"'Mango',\", \"'Spicy/Herbal']\"]"
+     },
+     "metadata": {},
+     "execution_count": 23
+    }
+   ],
+   "source": [
+    "q = for_brandon.iloc[0]['flavors'].\n",
+    "q"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
