--- a/temp.ipynb
+++ b/temp.ipynb
@@ -79,7 +79,8 @@
    "source": [
     "for_brandon = pd.read_csv('forbrandon.csv')\n",
     "\n",
-    "for_brandon.to_json('for_brandon.json', orient='records')\n"
+    "for_brandon.to_json('for_brandon.json', orient='records')\n",
+    "q = eval(for_brandon)"
    ]
   },
   {
@@ -121,21 +122,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "[\"['Blueberry',\", \"'Mango',\", \"'Spicy/Herbal']\"]"
+      "text/plain": "list"
      },
      "metadata": {},
-     "execution_count": 23
+     "execution_count": 29
     }
    ],
    "source": [
-    "q = for_brandon.iloc[0]['flavors'].\n",
-    "q"
+    "q = for_brandon.iloc[0]['flavors']\n",
+    "q = eval(for_brandon.iloc[0]['flavors'])\n",
+    "q\n",
+    "type(q)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def list_convert(string):\n",
+    "    return eval(string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for_brandon['flavors'] = for_brandon.apply(lambda x: list_convert(x['flavors']), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for_brandon['effects'] = for_brandon.apply(lambda x: list_convert(x['effects']), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "name           object\ndescription    object\nflavors        object\neffects        object\ndtype: object"
+     },
+     "metadata": {},
+     "execution_count": 38
+    }
+   ],
+   "source": [
+    "for_brandon.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "'Blueberry'"
+     },
+     "metadata": {},
+     "execution_count": 40
+    }
+   ],
+   "source": [
+    "for_brandon.iloc[0]['flavors'][0]"
    ]
   },
   {
